# cs100-project-

./: .gitignore  Base.hpp  CMakeCache.txt  CMakeLists.txt  CReviewmain.cpp  Items.cpp  Items.hpp  Makefile  Order.cpp  Order.hpp  OrderDetailsMain.cpp  README.md  ReviewStrategy.cpp  ReviewStrategy.hpp  Shop.cpp  Shop.hpp  all_tests.hpp  cmake_install.cmake  discount.cpp  discount.hpp  logo.cpp  main_tests.cpp  test.cpp  visitor.cpp  visitor.hpp
